# fp_universal_driver

./: .gitignore  2-build-layer.sh  README.md  api.py  config.ini  main.py  pyproject.toml  requirements.txt  template.yaml
events/: info.json
function/: lambda_function.py  main.py  models.py  requirements.txt
function/endpoints/: info.py
function/src/: base_fp_object.py  command.py  header.py
function/src/Prod72/: command.py
function/src/Prod8A/: fp.py  payment.py  plu.py
function/src/Prod96/: command.py  header.py
function/tests/functional/: test_8A.py  test_std.py
function/tests/unit/: test_iva.py
src/: base_fp_object.py  category.py  command.py  fp.py  header.py  iva.py  payment.py  plu.py  pos.py  validator.py
src/Prod72/: command.py  fp.py
src/Prod8A/: category.py  command.py  fp.py  header.py  iva.py  payment.py  plu.py  pos.py
src/Prod96/: category.py  command.py  fp.py
tests/: test_core.py
tests/functional/: fp_tests.py  test_8A.py  test_std.py
tests/unit/: test_iva.py
tests/unit/axon/: test_iva.py
tests/unit/prod72/: test_commands.py
tests/unit/prod8A/: test_commands.py  test_iva.py
tests/unit/prod96/: test_command.py
