[build-system]
requires = ["setuptools>=61.0", "requests", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "fp_universal_driver"
version = "0.0.1"
authors = [
  { name="Stefano Maddè", email="sm@spforniture.it" },
]
description = "Python universal driver for italian fiscal printers (RT)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stemadde/fp_universal_driver"
"Bug Tracker" = "https://github.com/stemadde/fp_universal_driver/issues"
